--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
+body {
+  background-color: #f5f5f5ee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  width: 642px;
+  height: 642px;
+  border: 1px solid #f50303;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container div {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #1a1919;
+}
