--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
-  background-color: #f5f5f5ee;
+  background-color: #ffffffee;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -18,7 +19,5 @@ body {
 }
 
 .container div {
-  width: 40px;
-  height: 40px;
   border: 1px solid #1a1919;
 }
